--- a/src/main/webapp/WEB-INF/views/meogol/test.html
+++ b/src/main/webapp/WEB-INF/views/meogol/test.html
@@ -7,7 +7,9 @@
 <body>
 
 <div th:each="dish : ${dishes}">
-    <a th:text="${dish.getId() + ', ' + dish.getName() + ', ' + dish.getPrice()}">order</a>
+    <a th:text="${dish.getId() + ', ' + dish.getDate() + ', ' + dish.getOrder_summ() +
+     ',\n '+ dish.getDish() + ', ' + dish.getPrice() + ', ' + dish.getCountDish()
+     }">order</a>
 </div>
 <br/>
 <hr/>
