add order update

--- a/src/main/webapp/WEB-INF/views/meogol/orders.html
+++ b/src/main/webapp/WEB-INF/views/meogol/orders.html
@@ -15,7 +15,7 @@
 <hr/>
 
 <form th:method="POST" th:action="@{/add_order}">
-<input type="submit" value="Open order"/>
+<input type="submit" value="Открыть заказ"/>
 </form>
 
 </body>
