--- a/src/main/webapp/WEB-INF/views/meogol/order.html
+++ b/src/main/webapp/WEB-INF/views/meogol/order.html
@@ -7,18 +7,23 @@
 <body>
 
 <div th:object="${order}">
-    Номер заказа: <p th:text="${order.getId()}"></p>
-    Дата заказа : <p th:text="${order.getDate()}"></p>
-    Сумма заказа: <p th:text="${order.getOrders_sum()}"></p>
+     <p th:text="${'Номер заказа:' + order.getId()}"></p>
+     <p th:text="${'Дата заказа:' + order.getDate()}"></p>
+     <p th:text="${'Сумма заказа:' + order.getOrders_sum()}"></p>
 
 </div>
 <hr/>
 
 <div th:each="o : ${od}">
     <p th:text="${'Блюдо: ' + o.getDish().getName() }">order</p>
-    <p th:text="${'Количество: '  + o.getCount()  }">order</p>
     <p th:text="${'Цена за шт: ' + o.getDish().getPrice()}">order</p>
+    <p th:text="${'Количество: ' + o.count}">order</p>
 
+    <form th:method="PATCH" th:action="@{/update_order_dish/{orderId}/{odId}(odId=${o.getId()}, orderId = ${order.getId()})}" th:object="${newOd}">
+        <label for="thisCount">Новое количество:</label>
+        <input type="text" th:field="*{count}" id="thisCount"/>
+        <input type="submit" value="Обновить количество" />
+    </form>
     <form th:method="DELETE" th:action="@{/delete_od/{id}/{orderId}(id=${o.getId()}, orderId = ${order.getId()})}">
         <input type="submit" value="Удалить блюдо"/>
     </form>
