set roles and pages

--- a/src/main/webapp/WEB-INF/views/auth/login.html
+++ b/src/main/webapp/WEB-INF/views/auth/login.html
@@ -21,9 +21,9 @@
         Неправильные имя или пароль
     </div>
 </form>
-<form th:method="GET" th:action="@{/registration}">
-    <input type="submit" value="Регистрация"/>
-</form>
+<!--<form th:method="GET" th:action="@{/registration}">-->
+<!--    <input type="submit" value="Регистрация"/>-->
+<!--</form>-->
 
 </body>
 </html>
