--- a/src/main/webapp/WEB-INF/views/auth/registration.html
+++ b/src/main/webapp/WEB-INF/views/auth/registration.html
@@ -26,11 +26,11 @@
     <br/>
 
     <label  class="radio-inline" th:field="*{role}">
-        <input type="radio" name="radioName" id="customer"  th:value="Povar" checked="checked"/>Повар
+        <input type="radio" name="radioName" id="customer"  th:value="ROLE_POVAR" checked="checked"/>Повар
     </label>
 
     <label  class="radio-inline" th:field="*{role}">
-        <input  type="radio" name="radioName"  id="staff" th:value="Kasir"/>Кассир
+        <input  type="radio" name="radioName"  id="staff" th:value="ROLE_KASIR"/>Кассир
     </label>
 
     <br/>
