--- a/src/main/webapp/WEB-INF/views/auth/registration.html
+++ b/src/main/webapp/WEB-INF/views/auth/registration.html
@@ -9,6 +9,9 @@
         <title>Registration</title>
 </head>
 <body>
+<form th:method="POST" th:action="@{/logout}">
+    <input type="submit" value="Выход" style="float: right;">
+</form>
 
 <form th:method="POST" th:action="@{/registration}" th:object="${person}">
     <label for="username">Введите имя пользователя: </label>
