--- a/src/main/webapp/WEB-INF/views/meogol/order.html
+++ b/src/main/webapp/WEB-INF/views/meogol/order.html
@@ -18,13 +18,14 @@
     <p th:text="${'Блюдо: ' + o.getDish().getName() }">order</p>
     <p th:text="${'Цена за шт: ' + o.getDish().getPrice()}">order</p>
     <p th:text="${'Количество: ' + o.count}">order</p>
+    <p th:text="${'Статус: ' + o.status}">status</p>
 
-    <form th:method="PATCH" th:action="@{/update_order_dish/{orderId}/{odId}(odId=${o.getId()}, orderId = ${order.getId()})}" th:object="${newOd}">
+    <form th:method="PATCH" th:action="@{/cashier/update_order_dish/{orderId}/{odId}(odId=${o.getId()}, orderId = ${order.getId()})}" th:object="${newOd}">
         <label for="thisCount">Новое количество:</label>
         <input type="text" th:field="*{count}" id="thisCount"/>
         <input type="submit" value="Обновить количество" />
     </form>
-    <form th:method="DELETE" th:action="@{/delete_od/{id}/{orderId}(id=${o.getId()}, orderId = ${order.getId()})}">
+    <form th:method="DELETE" th:action="@{/cashier/delete_od/{id}/{orderId}(id=${o.getId()}, orderId = ${order.getId()})}">
         <input type="submit" value="Удалить блюдо"/>
     </form>
     <br>
@@ -32,7 +33,7 @@
 
 
 <hr/>
-<form th:method="POST" th:action="@{/add_order_dish/{orderId}(orderId=${order.getId()})}" th:object="${newOd}">
+<form th:method="POST" th:action="@{/cashier/add_order_dish/{orderId}(orderId=${order.getId()})}" th:object="${newOd}">
     <select th:field="${newOd.dish.id}">
         <option th:each="d: ${dishes}" th:text="${d.getName()}"  th:value="${d.getId()}">Value</option>
     </select>
@@ -42,7 +43,7 @@
     <input type="submit" value="Добавить блюдо" />
 </form>
 
-<form th:method="GET" th:action="@{/home}">
+<form th:method="GET" th:action="@{/cashier/home}">
     <input type="submit" value="Назад"/>
 </form>
 
