--- a/src/main/webapp/WEB-INF/views/auth/registration.html
+++ b/src/main/webapp/WEB-INF/views/auth/registration.html
@@ -40,7 +40,7 @@
     <input type="submit" value="Регистрация!"/>
 </form>
 <form th:method="GET" th:action="@{/login}">
-    <input type="submit" value="Авторизация"/>
+    <input type="submit" value="Назад"/>
 </form>
 
 </body>
